--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.0",
     "lucide-react": "^0.321.0",
     "react": "^18.2.0",
@@ -36,6 +37,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "husky": "^9.0.10",
     "postcss": "^8.4.33",
+    "react-icons": "^5.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
