--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-hook/media-query": "^1.1.1",
+    "@tanstack/react-query": "^5.44.0",
+    "@tanstack/react-query-devtools": "^5.44.0",
     "@tanstack/react-table": "^8.12.0",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
