--- a/package.json
+++ b/package.json
@@ -75,6 +75,6 @@
     "react-icons": "^5.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
-    "vite": "5.0.8"
+    "vite": "^5.0.8"
   }
 }
