--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.471.0",
     "next-themes": "^0.4.4",
     "pdfjs-dist": "^4.10.38",
